--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,5 +16,9 @@ image = {version="0.24.6"}
 imageproc = "0.23.0"
 rusttype = "0.9.3"
 
-chrono = "0.4.24"
+chrono = { version = "0.4.24", features = ["serde"] }
 chrono-tz = "0.8.2"
+dotenv = "0.15.0"
+serde_json = "1.0.142"
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "rust_decimal"] }
+rust_decimal = { version = "1.35", features = ["serde"] }
