--- a/miniprogram/project.private.config.json
+++ b/miniprogram/project.private.config.json
@@ -18,19 +18,7 @@
     "bigPackageSizeSupport": false,
     "useIsolateContext": false
   },
-  "condition": {
-    "miniprogram": {
-      "list": [
-        {
-          "name": "pages/index/index",
-          "pathName": "pages/index/index",
-          "query": "",
-          "scene": null,
-          "launchMode": "default"
-        }
-      ]
-    }
-  },
+  "condition": {},
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "projectname": "yg",
   "libVersion": "3.9.0"
