--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,6 @@ SECRET=
 IMAGE_DIR=./images
 
 # 服务器配置 / Server Configuration (optional, defaults in Rocket.toml)
-# SERVER_HOST=127.0.0.1
-# SERVER_PORT=8002
+SERVER_SCHEME=http
+SERVER_HOST=127.0.0.1
+SERVER_PORT=8002
